--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -323,11 +323,11 @@
 
     @media screen and (max-width: map-get($flexboxgrid-breakpoints, sm)) {
 
-        $sectionPaddingV: 64px;
+        $sectionPaddingTop: 128px;
 
         section#intro {
 
-            padding: $sectionPaddingV 0;
+            padding: $sectionPaddingTop 0 0;
 
             .col-right {
                 height: 310px;
@@ -359,7 +359,7 @@
 
         section#services {
 
-            padding: $sectionPaddingV 0;
+            padding: $sectionPaddingTop 0 0;
 
             h2 { text-align: center !important; }
             .service {
@@ -369,7 +369,7 @@
 
         section#applications {
 
-            padding: $sectionPaddingV 0;
+            padding: $sectionPaddingTop 0 0;
 
             .app {
 
@@ -408,7 +408,7 @@
 
         section#advantages {
 
-            padding: $sectionPaddingV 0;
+            padding: $sectionPaddingTop 0 0;
 
             .shape {
                 background-size: 70%;
@@ -426,7 +426,7 @@
 
         section#team {
 
-            padding: $sectionPaddingV 0;
+            padding: $sectionPaddingTop 0 0;
 
             .shape { display: none; }
 
@@ -466,7 +466,7 @@
 
         section#contact {
 
-            padding: $sectionPaddingV 0;
+            padding: $sectionPaddingTop 0 64px;
             overflow: hidden;
 
             .shape {
